--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/nishahomes192.png",
+      "src": "/NishaHomes192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
